<resources>
    <string name="app_name">recipe_finder</string>
    <string name="welcome">Welcome!</string>
    <string name="recipebook">My Recipe Book</string>
    <string name="myrecipes">My Recipes</string>

    // Registration strings
    <string name="register">REGISTER</string>
    <string name="name">Name</string>
    <string name="e_mail_address">E-mail Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>

    // Login strings
    <string name="welcome_back">Welcome Back!</string>
    <string name="email_login">E-mail Address</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="chooking">Chooking</string>
    <string name="tagline">crave. locate. create</string>

    // Row layout strings
    <string name="recipe_name">Recipe name</string>
    <string name="difficulty">Difficulty:</string>
    <string name="total_time">Total time:</string>
    <string name="_5_0">5.0 ()</string>

    // Create recipe strings
    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>
    <string name="add">Add</string>
    <string name="addingr">Add Ingredients</string>
    <string name="addsteps">Add Steps</string>
    <string name="deletestep">Swipe to delete steps</string>
    <string name="create">Create Recipe</string>
    <string name="create_name">Recipe Name</string>
    <string name="create_cuisine">Cuisine</string>
    <string name="create_size">Serving Size</string>
    <string name="create_difficulty">Difficulty</string>
    <string name="create_preptime">Prep Time</string>
    <string name="create_cooktime">Cooking Time</string>
    <string name="create_desc">Description</string>
    <string name="create_new">Next</string>
    <string name="create_update">Update</string>

    // Recipe Page Placeholders
    <string name="cuisine">cuisine</string>
    <string name="servingsize">serving size</string>
    <string name="preptime">prep time</string>
    <string name="cooktime">cook time</string>
    <string name="recipe_owner">by Nancy Mercado</string>
    <string name="recipe_rating">4.3</string>
    <string name="recipe_cuisine">MEDITERRANEAN</string>
    <string name="recipe_size">5 SERVINGS</string>
    <string name="recipe_prep">20 MINUTES</string>
    <string name="recipe_cook">10 MINTUES</string>
    <string name="recipe_desc">This is a sample description for a recipe to see how long it can fit and to see gaano kahaba ba yung kaya nito just cause</string>
    <string name="createsteps">Recipe Steps</string>
    <string name="stepnum">1</string>
    <string name="comments">COMMENTS ></string>
    <string name="commentbtn">COMMENT</string>
    <string name="comment_hint">What are your thoughts?</string>
    <string name="samplecomment">This was an interesting and easy recipe to follow</string>
    <string name="stepdesc">In a medium bowl, add milk, baking powder, vanilla, mayonnaise and egg yolks. Sift in cake flour using a flour sifter or fine mesh strainer. Mix with a whisk until batter is smooth and the mixture is a pale yellow.</string>

    // Profile strings
    <string name="sample_name">User Name</string>
    <string name="sample_email">User email</string>
    <string name="recipes_created">Recipes Created</string>
    <string name="update">Update</string>
    <string name="notice">You do not have any saved recipes.</string>
    <string name="recipes_notice">You have not posted any recipes.</string>
    <string name="sample_about">User description</string>

    // Create recipe string arrays
    <string-array name="cuisine_array">
        <item>American</item>
        <item>Cajun</item>
        <item>Chinese</item>
        <item>Filipino</item>
        <item>German</item>
        <item>Greek</item>
        <item>Indian</item>
        <item>Italian</item>
        <item>Japanese</item>
        <item>Korean</item>
        <item>Mediterranean</item>
        <item>Mexican</item>
        <item>Spanish</item>
        <item>Thai</item>
        <item>Vietnamese</item>
    </string-array>

    <string-array name="size_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>10+</item>
    </string-array>
    <string-array name="difficulty">
        <item>Easy</item>
        <item>Moderate</item>
        <item>Difficult</item>
    </string-array>
</resources>