<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/navdrawer"
    tools:context=".RecipeBook">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RecipePage">

        <include
            android:id="@+id/action_bar"
            layout="@layout/main_toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/faveBtn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="22dp"
            android:layout_marginBottom="22dp"
            android:clickable="true"
            android:src="@drawable/ic_favorite"
            app:backgroundTint="#FF8227"
            app:elevation="3dp"
            app:fabCustomSize="60dp"
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:maxImageSize="35dp"
            app:tint="@android:color/white" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#FFFFFF"
            android:fillViewport="false"
            android:isScrollContainer="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/action_bar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20dp">

                <ImageView
                    android:id="@+id/recipe_img"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:fitsSystemWindows="false"
                    android:scaleType="centerCrop"
                    tools:srcCompat="@tools:sample/backgrounds/scenic[7]" />

                <TextView
                    android:id="@+id/recipe_nameTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/copse"
                    android:text="@string/recipe_name"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/recipe_opTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_semibold"
                    android:text="@string/recipe_owner"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:textStyle="italic" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/cuisine"
                        android:textAlignment="center"
                        android:textColor="#686868" />

                    <TextView
                        android:id="@+id/recipe_cuisineTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/open_sans_semibold"
                        android:text="@string/recipe_cuisine"
                        android:textAlignment="center"
                        android:textColor="#FEA841" />

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/servingsize"
                        android:textAlignment="center"
                        android:textColor="#686868" />

                    <TextView
                        android:id="@+id/recipe_servingTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/open_sans_semibold"
                        android:text="@string/recipe_size"
                        android:textAlignment="center"
                        android:textColor="#FEA841" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/textView22"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/preptime"
                        android:textAlignment="center"
                        android:textColor="#686868" />

                    <TextView
                        android:id="@+id/recipe_prepTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/open_sans_semibold"
                        android:text="@string/recipe_prep"
                        android:textAlignment="center"
                        android:textColor="#FEA841" />

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/cooktime"
                        android:textAlignment="center"
                        android:textColor="#686868" />

                    <TextView
                        android:id="@+id/recipe_cookTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/open_sans_semibold"
                        android:text="@string/recipe_cook"
                        android:textAlignment="center"
                        android:textColor="#FEA841" />
                </LinearLayout>

                <TextView
                    android:id="@+id/recipe_descTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="30dp"
                    android:fontFamily="@font/open_sans"
                    android:lineSpacingExtra="6dp"
                    android:text="@string/recipe_desc"
                    android:textAlignment="gravity"
                    android:textColor="#686868"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="@font/copse"
                    android:text="@string/ingredients"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/ingredientsRv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="40dp">

                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="@font/copse"
                    android:text="@string/steps"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/stepsRv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="80dp">

                </androidx.recyclerview.widget.RecyclerView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|start"
                    android:orientation="horizontal"
                    android:paddingStart="25dp"
                    android:paddingEnd="25dp">

                    <ImageView
                        android:id="@+id/dislikeBtn"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="15dp"
                        android:clickable="true"
                        app:srcCompat="@drawable/ic_thumbsdown" />

                    <ImageView
                        android:id="@+id/likeBtn"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:clickable="true"
                        app:srcCompat="@drawable/ic_thumbsup" />

                    <TextView
                        android:id="@+id/commentsTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:clickable="true"
                        android:fontFamily="@font/open_sans_semibold"
                        android:text="@string/comments"
                        android:textColor="#C05100"
                        android:textSize="20sp" />

                </LinearLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white">

        <include layout="@layout/nav_drawer" />
    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>